--- a/solutions-enterprise.html
+++ b/solutions-enterprise.html
@@ -2100,7 +2100,7 @@
                 <nav class="desktop-nav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li class="dropdown">
                             <a href="services.html">Services <i class="fas fa-chevron-down"></i></a>
                             <div class="dropdown-content">
