--- a/solutions-enterprise.html
+++ b/solutions-enterprise.html
@@ -2112,8 +2112,8 @@
                             </div>
                         </li>
                         <li><a href="case-studies.html">Case Studies</a></li>
-                        <li><a href="blog.html">Insights</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="case-studies">Insights</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </nav>
                 
