--- a/index.html
+++ b/index.html
@@ -2550,7 +2550,7 @@
                     <div class="footer-logo">TURBO TITANS</div>
                     <p class="footer-description">
                         Accelerating digital transformation through innovative technologies, 
-                        robust security frameworks, and strategic collaborations since 2018.
+                        robust security frameworks, and strategic collaborations globally.
                     </p>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
